[package]
name = "espflash"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "espflash"

[lib]

[dependencies]
serial = "0.4"
byteorder = "1.3.4"
slip-codec =  "0.1.2"
bytemuck = { version = "1.4.0", features = ["derive"] }
xmas-elf = "0.7.0"
thiserror = "1.0.20"