[package]
name = "cargo-espflash"
version = "3.2.0"
edition = "2021"
rust-version = "1.74"
description = "Cargo subcommand for flashing Espressif devices"
repository = "https://github.com/esp-rs/espflash"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cli", "embedded", "esp"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "embedded",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
cargo_metadata = "0.18.1"
clap           = { version = "4.5.20", features = ["derive", "wrap_help"] }
env_logger     = "0.11.5"
esp-idf-part   = "0.5.0"
espflash       = { version = "3.2.0", path = "../espflash" }
log            = "0.4.22"
miette         = { version = "7.2.0", features = ["fancy"] }
serde          = { version = "1.0.210", features = ["derive"] }
thiserror      = "1.0.64"
toml           = "0.8.19"

[target.'cfg(unix)'.dependencies]
cargo = { version = "0.83.0", features = ["vendored-openssl"] }

[target.'cfg(windows)'.dependencies]
cargo = "0.83.0"
