[package]
name = "cargo-espflash"
version = "4.0.0-dev"
edition = "2021"
rust-version = "1.82"
description = "Cargo subcommand for flashing Espressif devices"
repository = "https://github.com/esp-rs/espflash"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cli", "embedded", "esp"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "embedded",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
cargo_metadata = "0.19.1"
clap           = { version = "4.5.24", features = ["derive", "wrap_help"] }
env_logger     = "0.11.6"
esp-idf-part   = "0.5.0"
espflash       = { version = "4.0.0-dev", path = "../espflash" }
log            = "0.4.22"
miette         = { version = "7.4.0", features = ["fancy"] }
serde          = { version = "1.0.217", features = ["derive"] }
thiserror      = "2.0.10"
toml           = "0.8.19"

[target.'cfg(unix)'.dependencies]
cargo = { version = "0.85.0", features = ["vendored-openssl"] }

[target.'cfg(windows)'.dependencies]
cargo = "0.85.0"
