[package]
name         = "cargo-espflash"
version      = "4.1.0"
edition      = "2024"
rust-version = "1.85"
description  = "Cargo subcommand for interacting with Espressif devices"
repository   = "https://github.com/esp-rs/espflash"
license      = "MIT OR Apache-2.0"

keywords = ["cargo", "cli", "embedded", "esp"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "embedded",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
cargo_metadata = "0.23"
clap           = { version = "4.5", features = ["derive", "wrap_help"] }
espflash       = { version = "4.2", path = "../espflash" }
log            = "0.4"
miette         = { version = "7.6", features = ["fancy"] }
serde          = { version = "1.0", features = ["derive"] }
thiserror      = "2.0"
toml           = "0.9"
