[package]
name         = "espflash"
version      = "4.0.0-dev"
edition      = "2021"
rust-version = "1.82"
description  = "A command-line tool for interacting with Espressif devices"
repository   = "https://github.com/esp-rs/espflash"
license      = "MIT OR Apache-2.0"
keywords     = ["cli", "embedded", "esp"]
categories   = ["command-line-utilities", "development-tools", "embedded"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.docs.rs]
features            = ["serialport"]
no-default-features = true
rustdoc-args        = ["--cfg", "docsrs"]

[[bin]]
name              = "espflash"
path              = "./src/bin/espflash.rs"
required-features = ["cli", "serialport"]

[dependencies]
addr2line       = { version = "0.24.2", optional = true }
base64          = { version = "0.22.1", default-features = false }
bitflags        = "2.9.0"
bytemuck        = { version = "1.21.0", features = ["derive"] }
clap            = { version = "4.5.24", features = ["derive", "env", "wrap_help"], optional = true }
clap_complete   = { version = "4.5.41", optional = true }
comfy-table     = { version = "7.1.3", optional = true }
crossterm       = { version = "0.28.1", optional = true }
ctrlc           = { version = "3.4.5", optional = true }
defmt-decoder   = { version = "=0.4.0", features = ["unstable"], optional = true }
dialoguer       = { version = "0.11.0", optional = true }
directories     = { version = "5.0.1", optional = true }
env_logger      = { version = "0.11.6", optional = true }
esp-idf-part    = { git = "https://github.com/i404788/esp-idf-part.git", default-features = false }
flate2          = { version = "1.0.35", optional = true }
indicatif       = { version = "0.17.9", optional = true }
log             = "0.4.22"
md-5            = { version = "0.10.6", default-features = false}
miette          = { version = "7.4.0", optional = true}
object          = { version = "0.36.7", default-features = false, features = ['read'] }
regex           = { version = "1.11.1", optional = true }
serde           = { version = "1.0.219", features = ["derive"], optional = true }
serialport      = { version = "4.7.0", default-features = false, optional = true }
sha2            = { version = "0.10.8", default-features = false}
slip-codec      = { version = "0.4.0", optional = true }
strum           = { version = "0.26.3", default-features = false, features = ["derive"] }
thiserror       = { version = "2.0.10", default-features = false }
toml            = { version = "0.8.19", optional = true }
update-informer = { version = "1.2.0", optional = true }

heapless        = { version = "0.8.0" }
embedded-io     = { version = "0.6.1", features = ["alloc"]}
embedded-io-adapters     = { version = "0.6.1"}

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

[features]
default = ["cli"]
cli = [
    "dep:addr2line",
    "dep:clap",
    "dep:clap_complete",
    "dep:comfy-table",
    "dep:crossterm",
    "dep:ctrlc",
    "dep:defmt-decoder",
    "dep:dialoguer",
    "dep:directories",
    "dep:env_logger",
    "dep:indicatif",
    "dep:update-informer",
    "miette/fancy",
    "serialport",
    "std"
]

# Enables connecting to a device via serial port
serialport = ["dep:regex", "dep:serialport", "dep:slip-codec", "dep:toml", "std"]

std = ["dep:miette", "dep:flate2", "object/default", "dep:serde", "thiserror/std", "strum/std", "esp-idf-part/std", "md-5/std", "sha2/std", "base64/std", "embedded-io/std", "embedded-io-adapters/std"]
