[package]
name    = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[features]
efuse-generator = ["pyo3"]

[dependencies]
chrono     = "0.4"
clap       = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log        = "0.4"
pyo3       = { version = "0.27.1", features = ["auto-initialize"], optional = true }
serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
